refactor: Removendo duplicação de Nome, Email e CPF em Passageiros e Motoristas